Format updates, code fixes.

--- a/Commodities.Rmd
+++ b/Commodities.Rmd
@@ -12,6 +12,8 @@ library(openxlsx)
 library(tidyverse)
 library(knitr)
 library(zoo)
+library(scales)
+theme_set(theme_light())
 
 setwd("~/OneDrive/Data/Commodities")
 
@@ -19,9 +21,9 @@ webFile <- "https://thedocs.worldbank.org/en/doc/5d903e848db1d1b83e0ec8f744e5557
 localFile <- "~/OneDrive/Data/Commodities/commodities.xlsx"
 
 if(!file.exists(localFile)){
-   download.file(webFile,localFile,
-	   method="wininet", 
-	   mode="wb") # "wb" means "write binary"
+   download.file(webFile, localFile,
+     method = "wininet",
+     mode = "wb") # "wb" means "write binary"
 } else message("File already loaded locally, using disk version")
 
 comm <- read.xlsx(xlsxFile = localFile,
@@ -31,20 +33,20 @@ comm <- as_tibble(comm)
 names(comm)[names(comm) == "X1"] <- "MONTH"
 
 # Commodities important to Liberia
-comm <- select(comm, 
-	MONTH,
-	COCOA,
+comm <- select(comm,
+  MONTH,
+  COCOA,
   COFFEE_ROBUS,
   LOGS_CMR,
   SAWNWD_CMR,
-	CRUDE_PETRO, 
-	PALM_OIL,
-	RICE_05,
-	SUGAR_WLD,
-	RUBBER_TSR20,
-	IRON_ORE,
-	GOLD
-	)
+  CRUDE_PETRO,
+  PALM_OIL,
+  RICE_05,
+  SUGAR_WLD,
+  RUBBER_TSR20,
+  IRON_ORE,
+  GOLD
+  )
 
 comm <- separate(comm, MONTH, c("YEAR", "MONTH"), sep = "M")
 comm$YEAR <- as.numeric(comm$YEAR)
@@ -52,7 +54,6 @@ comm$MONTH <- as.numeric(comm$MONTH)
 comm$RUBBER_TSR20 <- as.numeric(comm$RUBBER_TSR20)
 
 comm$DATE <- as.yearmon(paste(comm$YEAR, comm$MONTH), "%Y %m")
-# comm$RUBBER_TSR20 <- comm$RUBBER_TSR20
 
 comm <- filter(comm, comm$YEAR > 2015)
 ```
@@ -60,163 +61,192 @@ comm <- filter(comm, comm$YEAR > 2015)
 ## Rice
 
 ```{r rice, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
-ggplot(comm, aes(x = DATE, y = RICE_05)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of rice ($/mt)") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
+ggplot(comm, aes(x = DATE, y = RICE_05)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of rice ($/mt)") +
+  geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
   annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$RICE_05)-25,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$RICE_05) - 25,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
 ```
 
 ## Palm Oil
 
 ```{r palm-oil, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
-ggplot(comm, aes(x = DATE, y = PALM_OIL)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of palm oil ($/mt)") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
+ggplot(comm, aes(x = DATE, y = PALM_OIL)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of palm oil ($/mt)") +
+  geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
   annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$PALM_OIL)-80,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$PALM_OIL) - 150,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
 ```
 
 ## Rubber
 
 ```{r rubber, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
-ggplot(comm, aes(x = DATE, y = RUBBER_TSR20)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of rubber ($/kg)") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
-  annotate(geom = "text",
+ggplot(comm, aes(x = DATE, y = RUBBER_TSR20)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of rubber ($/kg)") +
+    geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
+annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$RUBBER_TSR20)-.16,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$RUBBER_TSR20) - .16,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
 ```
 
 ## Iron ore
 
 ```{r iron, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
-ggplot(comm, aes(x = DATE, y = IRON_ORE)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of iron ore ($/dmtu)*") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
+ggplot(comm, aes(x = DATE, y = IRON_ORE)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of iron ore ($/dmtu)*") +
+  geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
   annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$IRON_ORE)-22,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$IRON_ORE) - 22,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
 ```
 
 ## Oil
 
 ```{r crude, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
-ggplot(comm, aes(x = DATE, y = CRUDE_PETRO)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of oil ($/bbl)") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
+ggplot(comm, aes(x = DATE, y = CRUDE_PETRO)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of oil ($/bbl)") +
+  geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
   annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$CRUDE_PETRO)-7.5,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$CRUDE_PETRO) - 12.5,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
 ```
 
 ## Gold
 
 ```{r gold, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
-ggplot(comm, aes(x = DATE, y = GOLD)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of gold ($/troy oz)") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
+ggplot(comm, aes(x = DATE, y = GOLD)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of gold ($/troy oz)") +
+  geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
   annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$GOLD)-110,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$GOLD) - 110,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
 ```
 
 ## Cocoa
 
 ```{r cocoa, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
-ggplot(comm, aes(x = DATE, y = COCOA)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of cocoa ($/kg)") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
+ggplot(comm, aes(x = DATE, y = COCOA)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of cocoa ($/kg)") +
+  geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
   annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$COCOA)-.16,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$COCOA) - .16,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
 ```
 
 ## Coffee
 
 ```{r coffee, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
-ggplot(comm, aes(x = DATE, y = COFFEE_ROBUS)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of coffee ($/kg)") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
+ggplot(comm, aes(x = DATE, y = COFFEE_ROBUS)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of coffee ($/kg)") +
+  geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
   annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$COFFEE_ROBUS)-.13,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$COFFEE_ROBUS) - .13,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
 ```
 
 ## Logs
 
 ```{r logs, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
 comm$LOGS_CMR <- as.numeric(comm$LOGS_CMR)
-ggplot(comm, aes(x = DATE, y = LOGS_CMR)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of logs ($/cubic meter)") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
+ggplot(comm, aes(x = DATE, y = LOGS_CMR)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of logs ($/cubic meter)") +
+  geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
   annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$LOGS_CMR)-9,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$LOGS_CMR) - 9,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
 ```
 
 ## Sawnwood
 
 ```{r sawnwood, echo=FALSE, error=FALSE, message=FALSE, warning=FALSE, eval=TRUE}
 comm$SAWNWD_CMR <- as.numeric(comm$SAWNWD_CMR)
-ggplot(comm, aes(x = DATE, y = SAWNWD_CMR)) + 
-  geom_line() +
-  labs(x = "Date", y = "Price of sawnwood ($/cubic meter)") +
-  theme_bw() + 
-  geom_vline(xintercept=as.numeric(comm$DATE[comm$DATE == "Jan 2020"]), linetype=1, color="red") +
+ggplot(comm, aes(x = DATE, y = SAWNWD_CMR)) +
+  geom_line(color = "#345D96", size = 1) +
+  labs(x = "", y = "Price of sawnwood ($/cubic meter)") +
+  geom_vline(xintercept = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
+             linetype = 1,
+             color = "#D01319",
+             size = .7) +
   annotate(geom = "text",
              label = "Start of pandemic",
              x = as.numeric(comm$DATE[comm$DATE == "Jan 2020"]),
-             y = max(comm$SAWNWD_CMR)-15,
-             angle = 90, 
-             vjust = 1.2)
+             y = max(comm$SAWNWD_CMR) - 15,
+             angle = 90,
+             vjust = 1.2) +
+  scale_y_continuous(labels = scales::dollar_format())
+
 ```
-
-
